# chainbench-grpc

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  config.example.toml  report.html
.github/workflows/: ci.yml  release.yml
src/: analysis.rs  clock.rs  collector.rs  config.rs  html.rs  lib.rs  main.rs  output.rs  slots.rs  throughput.rs  timing.rs  warmup.rs
src/application/: mod.rs  run.rs  slots.rs  throughput.rs
src/domain/: analysis.rs  clock.rs  collector.rs  config.rs  mod.rs  scoring.rs  timing.rs
src/infrastructure/: config_file.rs  mod.rs  sntp.rs
src/infrastructure/geyser/: client.rs  mod.rs  yellowstone.rs
src/presentation/: html.rs  mod.rs  output.rs
src/providers/: mod.rs  yellowstone.rs
tests/: mock_server.rs  pipeline.rs
