[package]
name = "chainbench-grpc"
version = "0.2.0"
edition = "2024"
description = "Comprehensive Solana gRPC benchmarking tool"
license = "Apache-2.0"
repository = "https://github.com/CSFeo/chainbench-grpc"
authors = ["CSFeo"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["tls-native-roots"] }
rustls = { version = "0.23", features = ["ring"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
futures = "0.3"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dashmap = "6"
comfy-table = "7"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bs58 = "0.5"
bytes = "1"
solana-pubkey = "2"
chrono = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.14", features = ["tls-native-roots"] }
tokio-stream = { version = "0.1", features = ["net"] }
prost-types = "0.14"
